--- a/src/Api.Service/Service.csproj
+++ b/src/Api.Service/Service.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Api.Domain\Domain.csproj" />
     <ProjectReference Include="..\Api.Data\Data.csproj" />
+    <ProjectReference Include="..\Api.CrossCutting\CrossCutting.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
