--- a/src/Api.Data.Test/Api.Data.Test.csproj
+++ b/src/Api.Data.Test/Api.Data.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.11" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -17,6 +18,7 @@
     <ProjectReference Include="..\Api.Data\Data.csproj" />
     <ProjectReference Include="..\Api.CrossCutting\CrossCutting.csproj" />
     <ProjectReference Include="..\Api.Domain\Domain.csproj" />
+    <!-- <ProjectReference Include="..\Api.Application\Application.csproj" /> -->
   </ItemGroup>
 
 </Project>
